# HOLOEYE-PLUTO-2-EMBEDDED

./: .travis.yml  CHANGELOG.RST  CONTRIBUTING.RST  LICENSE  MANIFEST.in  README.md  README.rst  links.txt  setup.cfg  setup.py
HOLOEYE-PLUTO-2-EMBEDDED/docs/: make.bat
HOLOEYE-PLUTO-2-EMBEDDED/docs/source/: conf.py
holoeyeMbedded/: __meta__.py
holoeyeMbedded/docs/source/: index.rst
holoeye_embedded/: __init__.py  __meta__.py  holoeye_slm.py
holoeye_embedded/docs/: Makefile
holoeye_embedded/docs/source/: conf.py  index.rst
requirements/: tox.txt
test/: test.py
