[metadata]
name = holoeye_embedded
version = 1.0.1
author = Ehsan Shaghaei
author_email = e.shaghaei@innopolis.university
description = an alternative interface to official API of the Holoeye PLUTO-2 Spatial Light Modulator in order to control multiple devices through RNDIS network rather than classic HDMI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ehsan2754/HOLOEYE-PLUTO-2-EMBEDDED
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True